<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/default_row_height"
    android:background="@color/cmn_lsv_header_background" >	
    <TextView
        style="@style/ListViewHeaderTxv"
        android:layout_width="0dp"
        android:layout_weight="1"       
        android:text="@string/setoffer_txv_header_food_text"         
    />
    <TextView
        style="@style/ListViewHeaderTxv"
        android:layout_width="50dp"
        android:text="@string/setoffer_txv_header_countunit_text"
    /> 
    <TextView
        style="@style/ListViewHeaderTxv"
        android:layout_width="50dp"
		android:text="@string/setoffer_txv_header_price_text"
    />   
    <TextView
        style="@style/ListViewHeaderTxv"
        android:layout_width="90dp"
		android:text="@string/setoffer_txv_header_prediscount_text"
    />
    <TextView
        style="@style/ListViewHeaderTxv"
        android:layout_width="70dp"
		android:text="@string/setoffer_txv_header_discountratio_text"
    />
    <TextView
        style="@style/ListViewHeaderTxv"
        android:layout_width="90dp"
		android:text="@string/setoffer_txv_header_discountmoney_text"
    />
    <TextView
        style="@style/ListViewHeaderTxv"
        android:layout_width="90dp"
		android:text="@string/setoffer_txv_header_postdiscount_text"
    />

</LinearLayout>