<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <group android:id="@+id/time_group"
        android:checkableBehavior="single">
     <item 
         android:id="@+id/radio_time_moring"
          android:title="@string/radio_time_moring_item"
        />
    <item 
         android:id="@+id/radio_time_night"
          android:title="@string/radio_time_night_item"
        />
    <item 
         android:id="@+id/radio_time_bighouse"
          android:title="@string/radio_time_bighouse_item"
        />
   <item 
         android:id="@+id/radio_time_inhouse"
          android:title="@string/radio_time_inhouse_item"
        />
   <item 
         android:id="@+id/radio_time_smallhouse"
          android:title="@string/radio_time_smallhouse_item"
        />
     </group>
</menu>