<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
	<TextView
	    style="@style/ListViewHeaderTxv"
	    android:layout_width="0dp"	   
	    android:layout_weight="1"
	    android:gravity="left"
	    android:clickable="false"
	    android:text="@string/pmethod_txv_header_method_text"
	/>
    <TextView
        style="@style/ListViewHeaderTxv"
        android:layout_width="@dimen/default_column_width_normal"
        android:gravity="left"
        android:clickable="false"
        android:text="@string/pmethod_txv_header_code_text"
    />
	<TextView
	    style="@style/ListViewHeaderTxv"
	    android:layout_width="@dimen/default_column_width_big"
	    android:gravity="left"
	    android:clickable="false"
	    android:text="@string/pmethod_txv_header_money_text"
	/>
</LinearLayout>