<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/setoffer_container_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"        
        android:orientation="vertical" >   
        <ListView
            android:id="@+id/setoffer_lsv_offeritems"
		    android:layout_width="match_parent"
		    android:layout_height="0dp"
		    android:layout_weight="1"		    
		/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/default_row_height"
            android:background="#f0fff0">
            <TextView
                android:id="@+id/setoffer_txv_consumetotal"
	            android:layout_width="0dp"
	            android:layout_weight="1"
	            android:layout_height="match_parent"
	            android:textSize="@dimen/font_size_middle"
	            android:gravity="center"
	            android:text="@string/setoffer_txv_consumetotal"
	        />
            <TextView
                android:id="@+id/setoffer_txv_service"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:textSize="@dimen/font_size_middle"
                android:gravity="center"
                android:text="@string/setoffer_txv_service" 
            />
            <TextView
                android:id="@+id/setoffer_txv_sum"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:textSize="@dimen/font_size_middle"
                android:gravity="center"
                android:text="@string/setoffer_txv_sum" 
            />
        </LinearLayout>
               
    </LinearLayout>
	<LinearLayout	    
	    android:layout_width="100dp"
	    android:layout_height="match_parent"
	    android:paddingTop="5dp"
	    android:paddingBottom="5dp"
	    android:orientation="vertical"
	    android:background="#ffdead"
	    android:gravity="center" >
	    <Button
	        style="@style/ResultableBtn"
	        android:id="@+id/setoffer_btn_service"
	    />
	    <Button
	        style="@style/ResultableBtn"
	        android:id="@+id/setoffer_btn_lowest"
	    />	      
	    <Button
	        style="@style/ResultableBtn"
	        android:id="@+id/setoffer_btn_discountratio"	        
	    />
	    <Button
	        style="@style/ResultableBtn"
	        android:id="@+id/setoffer_btn_discountmoney"	        
	    />
	    <Button
	        style="@style/ResultableBtn"
	        android:id="@+id/setoffer_btn_canceldiscount"	        
	        android:text="@string/setoffer_btn_canceldiscount_text"
	    />
	    <RadioGroup 
	        android:id="@+id/setoffer_rdp_allmode"
	        android:layout_width="match_parent"
	        android:layout_height="0dp"
	        android:layout_weight="1"        
	        android:gravity="center_horizontal|bottom"
	        android:checkedButton="@+id/setoffer_rbn_allwithexception"
	        android:orientation="vertical" >
	        <RadioButton
	            android:id="@+id/setoffer_rbn_allwithexception" 
	            android:text="@string/setoffer_rbn_allwithexception_text"
	        />
	        <RadioButton
	            android:id="@+id/setoffer_rbn_allnoexception"
	            android:text="@string/setoffer_rbn_allnoexception_text" 
	        />
	    </RadioGroup>
	</LinearLayout>	  

</LinearLayout>