<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
	<include layout="@layout/cmn_titlebar"/>
	<LinearLayout 
        android:id="@+id/dinnertable_container_table_type"
        style="@style/TabBar">        
        <EditText
            android:id="@+id/dinnertable_edt_search"            
            android:layout_width="240dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="right|center_vertical"                     
        />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:layout_weight="1"
        android:orientation="horizontal"        
    >
        <GridView
            android:id="@+id/dinnertable_gdv_table"
            android:layout_width="240dp"
            android:layout_height="match_parent"
            android:columnWidth="180dp"
            android:numColumns="5"
            android:verticalSpacing="10dp"
            android:horizontalSpacing="10dp"
            android:layout_weight="1" 
        />
        <LinearLayout style="@style/SideBar">            
	        <Button
	            style="@style/SideBarItem"
	            android:layout_weight="1"
	            android:onClick="onFilter"           
	            android:text="@string/table_btn_spare_text"
        	/>
	        <Button
	            style="@style/SideBarItem"
	            android:layout_weight="1"
	            android:onClick="onFilter" 
	            android:text="@string/table_btn_reserve_text" 
	        />
	        <Button
                style="@style/SideBarItem"
                android:layout_weight="1"
                android:onClick="onFilter"                                
	            android:text="@string/table_btn_using_text" 
            />
	        <Button
	            style="@style/SideBarItem"
	            android:layout_weight="1"
	            android:onClick="onFilter"           
	            android:text="@string/table_btn_maintain_text"
        	/>
        </LinearLayout>
    </LinearLayout>"

</LinearLayout>